--- a/public/locale/en.json
+++ b/public/locale/en.json
@@ -1,7 +1,5 @@
 {
-  "a_vitals_observation_device": "A Vitals Observation device",
   "actions": "Actions",
-  "are_you_sure_you_want_to_delete_the_preset": "Are you sure you want to delete the preset ",
   "associate": "Associate",
   "associating": "Associating...",
   "avg": "Avg",
@@ -17,6 +15,7 @@
   "database": "Database",
   "delete": "Delete",
   "delete_position_preset": "Delete Position Preset",
+  "delete_preset_confirmation": "Are you sure you want to delete the preset {{preset_name}}? This action cannot be undone",
   "details_about_the_connected_vitals_observation_device": "Details about the connected vitals observation device",
   "device_type": "Device Type:",
   "do_you_want_to_associate_it_to_this_encounter": "Do you want to associate it to this encounter?",
@@ -31,7 +30,6 @@
   "gateway_endpoint_address_placeholder": "Gateway's Endpoint Address without http:// or https://",
   "hl7_monitor": "HL7 Monitor",
   "inbuilt_presets": "Inbuilt Presets",
-  "is_available_in_this_encounter_location": "is available in this encounters location.",
   "jitter": "Jitter",
   "latency": "Latency",
   "loading": "Loading...",
@@ -70,12 +68,12 @@
   "start_monitoring": "Start Monitoring",
   "stream_id": "Stream ID",
   "test_connection": "Test Connection",
-  "this_action_cannot_be_undone": "This action cannot be undone",
   "type": "Type",
   "unable_to_communicate_with_the_camera_device": " Unable to communicate with the camera device. The camera credentials may be incorrect.",
   "update": "Update",
   "username": "Username",
   "view": "View",
+  "vital_observation_device_availability": "A Vitals Observation device <strong>{{device_name}}</strong> {{device_type}} is available in this encounters location.",
   "vitals_observation_device_configuration": "Vitals Observation Device Configuration",
   "vitals_observation_endpoint_address": "Vitals Observation Device's endpoint address (e.g., 192.168.1.100)",
   "warning": "Warning:",
